<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>blueberry_dc</name>
  <version>0.0.0</version>
  <description>Package for controlling two linear actuators with stepper motors, camera, load cell, and IMU modules for blueberry cane stiffness and damping testing</description>
  <maintainer email="chelsevanatter@gmail.com">chelse</maintainer>
  <license>BSD 3-Clause</license>

  <depend>rclpy</depend> 
  <depend>std_msgs</depend> 
  <depend>rosidl_default_generators</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
